2014-11-21  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (partition_by_func): Rename one local variable for clarity.
	Remove unessential variable last, and move the next variable
	into loop scope.

2014-11-20  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (wrap_star, wrap): New functions.

	* eval.c (eval_init): Registered wrap and wrap* intrinsics.

	* lib.h (wrap_star, wrap): Declared.

	* txr.1: wrap and wrap* documented.

2014-11-20  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (succ, ssucc, sssucc, pred, ppred, pppred): New functions.

	* eval.c (eval_init): Register new functions as intrinsics.

	* lib.h (succ, ssucc, sssucc, pred, ppred, pppred): Declared.

	* txr.1: Documented.

2014-11-20  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (where): Argument order reversed, with compat support.

	* lib.h (where): Declaration updated.

	* txr.1: Documented.

2014-11-20  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (sel): Accept a function in place of the index list.

	* txr.1: Documented.

2014-11-17  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (split_str): If the separator string is empty,
	then unless opt_compat is 100 or less, provide a more
	consistent behavior, rather than splitting the string
	into characters. This latter behavior was never documented.

	* txr.1: Documented.

	* dep.mk: Updated.

2014-11-15  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (max2, min2): Use the less comparison function
	for generic semantics.

	* lib.h (max2, min2): Parameter names changed to avoid suggesting
	that the operands are numbers.

	* txr.1: Documentation for min and max updated.

2014-11-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (opip_s, oand_s, chain_s, chand_s): New global variables.
	(macro_form_p): Forward declaration added.
	(me_opip): New static function.
	(eval_init): Intern new symbols, register opip and oand macros
	to me_opip function. Use chain_s and chand_s in registration
	for chain and chand.

	* txr.1: Document opip and oand

	* tl.vim, txr.vim: Regenerated.
